# bxp-core

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: basic-router.rs  benchmark.rs  echo-client.rs  echo-server.rs  file-client.rs  file-server.rs  file-transfer.rs  grpc_benchmark.rs
schema/: benchmark.proto  bxp.capnp  bxp_capnp.rs
spec/: spec.md
src/: client.rs  lib.rs  main.rs  protocol.rs  router.rs  server.rs
tests/: integration.rs
