[package]
name = "bxp_node"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Nicholas Nisopoli"]
description = "BXP Core library: QUIC + Cap'n Proto networking"
license = "MIT"

[dependencies]
quinn = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
capnp = "0.19"
anyhow = "1.0"

[build-dependencies]
capnpc = "0.19"