[package]
name = "bxp-core"
version = "0.1.1"
edition = "2021"
description = "The core implementation of the Binary eXchange Protocol (BXP), a high-performance QUIC-based data transfer standard."
license = "MIT"
repository = "https://github.com/nicholasnisopoli/bxp-core"
readme = "README.md"
keywords = ["quic", "networking", "protocol", "capnp", "bxp"]
categories = ["network-programming", "asynchronous"]

[dependencies]
quinn = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
capnp = "0.19"
anyhow = "1.0"
webpki-roots = "0.26"
rustls-pemfile = "2"

[build-dependencies]
capnpc = "0.19"

[features]
tls-insecure = []